added some styling so I can better see the problem'

--- a/index.html
+++ b/index.html
@@ -12,13 +12,20 @@
     <section class="player">
       <audio class="music-player" controls="controls" src=""></audio>
     </section>
+    <hr id="first">
     <section class="search">
       <form class="search-form">
         <input type="text" name="search" value="" placeholder="Search for Artist">
         <input id="button" type="submit" name="submit" value="search">
       </form>
     </section>
-    <section class="results"></section>
+    <hr id="second">
+    <section class="results">
+      <h1>Search Results:</h1>
+      <article class="resultWrapper">
+<!-- songs will go here -->
+      </article>
+    </section>
   </div>
   <script src="main.js"></script>
 </body>
