--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
 <body>
   <div class="container">
     <header>
-      <h1>Really Awesome Music Site</h1>
+      <h1>Thumps For Your Lumps: Vol 1</h1>
     </header>
     <section class="player">
-      <audio class="music-player" controls="controls" src=""></audio>
+      <audio class="music-player" controls="controls" src="" autoplay></audio>
     </section>
     <hr id="first">
     <section class="search">
       <form class="search-form">
         <input type="text" name="search" value="" placeholder="Search for Artist">
         <input id="button" type="submit" name="submit" value="search">
+        <audio id="searchAudio" src="DIAL_LSP_OhSnap1.wav" autostart="false" ></audio>
       </form>
     </section>
     <hr id="second">
